tests/conformance/typecheck/valid/simple_val.ks
val x = 1
val s = "hello"
