tests/conformance/typecheck/invalid/undefined_variable.ks
// Undefined variable
val x = y + 1
